2008-11-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_main.c:
	define correctly EAPI

2008-11-21  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/Makefile.am:
	* src/bin/evil_suite.c:
	* src/bin/evil_test_gettimeofday.c:
	* src/bin/evil_test_gettimeofday.h:
	add a small test for gettimeofday

	* src/bin/evil_test_memcpy.c:
	fix warning

	* src/lib/Evil.h:
	* src/lib/Makefile.am:
	* src/lib/evil_main.c:
	* src/lib/evil_main.h:
	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	* src/lib/evil_private.h:
	add gettimeofday for Windows CE natively. It is necessary
	to initialise evil with evil_init() now, to have that
	feature.

	* src/lib/evil_stdio.c:
	* src/lib/evil_string.c:
	fix warnings

2008-11-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_unistd.h:
	export execvp()

2008-11-09  Vincent Torri  <doursse at users dot sf dot net>

	* evil.pc.in:
	remove -ldl

	* src/lib/evil_dirent.c:
	change guards

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	add some checks,
	add a function that more or less mimic fopen, but with
	native win32 api calls. This is only for the evas loader
	and saver of png files and works only for Windows CE.

	* src/lib/evil_unistd.c:
	move a free() and remove debug calls.

2008-11-05  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	overload rewind for Windows CE

	* src/lib/evil_unistd.c:
	remove debug

2008-11-04  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil_stdio.h:
	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	overload the stat() function for native Windows CE platform.
	move pipe() and fopen() definitions to their own header files

2008-11-01  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	add a flag to know if cegcc is used or not

	* src/lib/Makefile.am:
	* src/lib/dirent.h:
	* src/lib/evil_dirent.c: