@@ -45,3 +45,33 @@ int ffs(int i)
 }
 
 #endif /* ! __CEGCC__ */
+
+
+#ifdef _WIN32_WCE
+
+/*
+ * String manipulation related functions
+ *
+ */
+
+int
+strcoll (const char *s1, const char *s2)
+{
+#ifdef UNICODE
+   wchar_t *ws1;
+   wchar_t *ws2;
+   int      res;
+
+   ws1 = evil_char_to_wchar(s1);
+   ws2 = evil_char_to_wchar(s2);
+   res = wcscmp(ws1, ws2);
+   if (ws1) free(ws1);
+   if (ws2) free(ws2);
+
+   return res;
+#else
+   return strcmp(s1, s2);
+#endif /* ! UNICODE */
+}
+
+#endif /* _WIN32_WCE */
